# Manganese

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE-APACHE  LICENSE-MIT  README  README.md  build.py  manganese-tests.cpp  manganese.cpp  manganese_tests.cpp  tests-main.cpp
.github/workflows/: build.yaml  cmake-multi-platform.yml  cmake-single-platform.yml  run_tests.yaml
.spec/: grammar.ebnf  keywords.spec  keywords.spec.md
docs/: 00_operators.md  01_variables.md  01_variables_and_types.md  02_containers.md  02_data_structures.md  03_control_flow.md  04_functions.md  05_modules_and_scoping.md  06_data_encapsulation.md  07_error_handling.md  09_macros_and_metaprogramming.md  10_memory_management.md  README.md
include/: core.hpp  global_macros.h  global_macros.hpp
include/frontend/: ast.h  ast.hpp  frontend.h  frontend.hpp  lexer.h  lexer.hpp  operators.h  parser.h  parser.hpp  semantic.h  semantic.hpp  token.h  visitor.h
include/frontend/ast/: ast.def  ast_base.h  ast_base.hpp  ast_block.hpp  ast_expressions.h  ast_expressions.hpp  ast_statements.h  ast_statements.hpp  ast_types.h  ast_types.hpp  visitor_base.hpp
include/frontend/lexer/: lexer_base.h  lexer_base.hpp  token.h  token.hpp  token_base.hpp  token_constexpr_impl.inl  token_helpers.hpp  token_type.hpp  tokens.def
include/frontend/parser/: operators.h  operators.hpp  parser_base.h  parser_base.hpp
include/frontend/semantic/: analyzer.hpp  primitives.hpp  semantic_analyzer.h  semantic_analyzer.hpp  semantic_type_helpers.h  semantic_type_helpers.hpp  symbol_table.h  symbol_table.hpp  type_context.hpp
include/frontend/visitor/: visitor_base.hpp
include/io/: filereader.h  filereader.hpp  logging.h  logging.hpp  reader.h  reader.hpp  stringreader.h  stringreader.hpp
include/middleend/codegen/: codegen_base.hpp
include/mnstl/: chunk_allocator.hxx  enum_matches.hxx  ext_num_config.hxx  fold_result.hxx  i128.hxx  number.hxx  safe_cmp.hxx
include/mnstl/ext_nums/: ext_num_config.hxx  i128.hxx
include/utils/: compiler_config.h  debug_utils.hpp  memory_tracking.h  memory_tracking.hpp  number_utils.h  number_utils.hpp  result.hpp  stox.h  type_names.hpp
scripts/: build.py  format.py  gen_header.py  lint.py
spec/: grammar.ebnf  keywords.spec  operators.spec  semantic.spec
src/: global_macros.h
src/core/: keywords.cpp  operators.cpp  token.cpp
src/core/include/: keywords.h  operators.h  token.h
src/frontend/: README.md  ast.cpp  ast_printing.cpp  lexer.cpp  lexer_escape_handling.cpp  nodes.cpp  parser.cpp  parser_expressions.cpp  parser_statements.cpp  token.cpp
src/frontend/ast/: ast.cpp  ast_dump.cpp  ast_to_string.cpp  visitor.cpp
src/frontend/include/: ast.h  lexer.h  nodes.h  parser.h  token.h  visitor.h
src/frontend/lexer/: keywords.cpp  lex2.cpp  lex_old.cpp  lexer.cpp  lexer_escape_handling.cpp  operators.cpp  token.cpp  token_helpers.cpp
src/frontend/lexer/include/: keywords.h  lex2.h  lex_old.h  lexer.h  operators.h  token.h
src/frontend/parser/: nodes.cpp  parser.cpp  parser_expressions.cpp  parser_lookups.cpp  parser_statements.cpp  parser_types.cpp
src/frontend/parser/include/: nodes.h  parser.h  visitor.h
src/frontend/semantic/: analyzer.cpp  analyzer_expressions.cpp  analyzer_statements.cpp  analyzer_types.cpp  semantic_analyzer.cpp  semantic_analyzer_expressions.cpp  semantic_analyzer_helpers.cpp  semantic_analyzer_statements.cpp  symbol_table.cpp  type_collection.cpp  type_context.cpp
src/frontend/semantic/expressions/: semantic_analyzer_access_expressions.cpp  semantic_analyzer_assignment.cpp  semantic_analyzer_literals.cpp  semantic_analyzer_operator_expressions.cpp  semantic_analyzer_variables.cpp
src/frontend/semantic/statements/: semantic_analyzer_control_flow.cpp  semantic_analyzer_declaration_statements.cpp  semantic_analyzer_declarations.cpp  semantic_analyzer_loops.cpp
src/frontend/visitor/: visitor.cpp
src/io/: cargs.c  filereader.cpp  logging.cpp  stringreader.cpp
src/io/include/: cxxopts.hpp  filereader.h  logging.h  reader.h  stringreader.h
src/middleend/codegen/: codegen.cpp  codegen_expressions.cpp  codegen_helpers.cpp  codegen_statements.cpp  codegen_types.cpp
src/utils/: number_utils.cpp  stox.cpp
tests/: lexer_tests.cpp  lexer_tests.mn  parser_tests.cpp  parser_tests.mn  semantic_analyzer_tests.cpp  testrunner.cpp  testrunner.h  testrunner.hpp  tests.h  tests.hpp
